--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,97 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.node{
+    height: 2.7vh;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+
+.icon{
+    font-size: 1.4rem !important;
+}
+
+.marker{
+    background-color: greenyellow !important;
+}
+
+.wall{
+    background-color: black !important;
+    border: black !important;
+}
+
+.visited{
+    background-color: rgb(0, 174, 255);
+    transition: all 0.5s ease-in;
+}
+
+.path-marker{
+    background-color: rgb(29, 218, 139) !important;
+}
+
+.path{
+    background-color: rgb(245, 192, 48);
+    transition: all 1s ease-in;
+}
+
+@media screen and (max-width: 1440px) {
+    html{
+        font-size: 14px;
+    }
+
+    .node{
+        height: 2.4vh;
+    }
+}
+
+@media screen and (max-width: 1680px) {
+
+    .node{
+        height: 2.2vh;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+
+    .node{
+        height: 2.1vh;
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .node{
+        height: 2.1vh;
+    }
+}
+
+@media screen and (max-width: 733px) {
+    html{
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 695px) {
+    html{
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:341px) {
+    html{
+        font-size: 11px;
+    }
+}
+
+@media screen and (max-width:311px) {
+    html{
+        font-size: 10px;
+    }
+}
+
