--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,72 @@
+.pop-up{
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+}
+
+.center-div{
+    flex-grow: 1;
+}
+
+.img-container{
+    display: flex; 
+    align-items: center; 
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center; 
+    padding: 0.4em 0.2em;
+}
+
+.img-container img{
+    width: 40%;
+}
+
+.subhead{
+    font-size: 1.4rem !important;
+}
+
+.btn-container{
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
+    padding: 0.4em 0.2em; 
+    margin: 0.6em; 
+    width: 100%;
+}
+
+.card{
+    background-color: white;
+    border: 1px solid rgb(12, 14, 34);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 2px;
+    padding: 0.5em 1.4em;
+    min-width: 200px;
+    max-width: 40%;
+    min-height: 60%;
+    max-height: 60%;
+}
+
+.card h1{
+    text-align: center;
+    margin: 0.5em 0px;
+    color: rgb(12, 14, 34);
+}
+.card p{
+    text-align: center;
+    color: rgb(12, 14, 34);
+    margin: 0.5em 0px;
+    font-size: 1rem;
+}
+
+
+
 .navbar{
     background-color: rgb(12, 14, 34);
     padding: .8em 1em;
@@ -27,17 +96,20 @@
     margin-right: 2px;
 }
 
-.options p{
+.options button{
     color: white;
+    background-color: rgb(12, 14, 34);
+    outline: transparent;
+    border: none;
     text-decoration: none;
     cursor: pointer;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     margin-right: 1em;
 }
 
-.options p:hover,
-.options p:focus{
+.options button:hover,
+.options button:focus{
     color: rgb(255, 153, 0);
 }
 
@@ -53,7 +125,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
     height: 100%;
     cursor: pointer;
@@ -79,7 +151,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
     height: 100%;
     cursor: pointer;
@@ -101,7 +173,7 @@
 
 .material-symbols-outlined{
     transition: transform 0.4s linear;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 
@@ -109,7 +181,7 @@
 .dropmenu-maze li{
     color: white;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     padding: .7em .7em;
 }
 
@@ -128,7 +200,7 @@
     color: white;
     font-size: 1rem;
     padding: .6em .8em;
-    font-weight: 600;
+    font-weight: 400;
     border-radius: 4px;
     cursor: pointer;
     border: none;
@@ -207,12 +279,13 @@
 }
 
 .secondary-nav div p{
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .secondary-nav div span{
     font-size: 1.2rem !important;
     font-weight: 400 !important;
+    color: rgb(38, 37, 80);
 }
 
 .node-p{
@@ -221,7 +294,7 @@
 }
 
 .banner{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     text-align: center;
     padding: .8em 0;
     color: rgb(1, 37, 53);
@@ -271,7 +344,7 @@
 
     .grid{
         grid-template-columns: repeat(56, 1fr);
-        grid-template-rows: repeat(35, 1fr);
+        grid-template-rows: repeat(32, 1fr);
     }
 }
 
@@ -284,7 +357,7 @@
 
     .grid{
         grid-template-columns: repeat(35, 1fr);
-        grid-template-rows: repeat(56, 1fr);
+        grid-template-rows: repeat(35, 1fr);
     }
 
     .dropdown-algo{
@@ -315,7 +388,7 @@
  
     .grid{
         grid-template-columns: repeat(20, 1fr);
-        grid-template-rows: repeat(98, 1fr);
+        grid-template-rows: repeat(34, 1fr);
     }
 
    .dropmenu-maze{
