--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@
     background-color: white;
 }
 
+.node span{
+    color: rgb(42, 21, 66);;
+}
+
 .icon{
     font-size: 1.4rem !important;
 }
@@ -32,6 +36,11 @@
     transition: all 0.5s ease-in;
 }
 
+.boom-visited{
+    background-color: rgb(212, 0, 255);
+    transition: all 0.5s ease-in;
+}
+
 .path-marker{
     background-color: rgb(29, 218, 139) !important;
 }
@@ -39,6 +48,14 @@
 .path{
     background-color: rgb(245, 192, 48);
     transition: all 1s ease-in;
+}
+
+.fill{
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
 
 @media screen and (max-width: 1440px) {
