Change configuration for output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
     <div class="center-div">
       <p class="subhead">I hope you have just as much fun playing around with this visualization tool as I had building it!</p>
       <p>For Better experience use Laptop or PC.</p>
-      <p>If you want to see the source code for this application, check out my github.</p>
+      <p>If you want to see the source code for this application, check out my <a href="https://github.com/ManishDait/Pathfinding-Visualizer" style="text-decoration: none;">github</a>.</p>
     </div>
     <div class="btn-container">
       <button class="btn" (click)="skip()">Skip</button>
