--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
     <div class="center-div">
     <p class="subhead">Choose an algorithm from the "Algorithms" drop-down menu.</p>
       <p>Note that some algorithms are unweighted, while others are weighted. Unweighted algorithms do not weight nodes into account, whereas weighted ones do. Additionally, not all algorithms guarantee the shortest path.</p>
-    <div class="img-container"><img src="../assets/images/Menu.png"></div>
+    <div class="img-container"><img src="../assets/images/menu.gif"></div>
     </div>
     
     <div class="btn-container">
@@ -54,10 +54,10 @@
     <h1>Meet the algorithms</h1>
     <div class="center-div">
       <p class="subhead">Not all algorithms are created equal.</p>
-    <div class="img-container">
-    <p><strong>Breath-first Search</strong> (unweighted): a great algorithm; guarantees the shortest path</p>
-    <p><strong>Depth-first Search</strong>  (unweighted): a very bad algorithm for pathfinding; does not guarantee the shortest path</p>
-    <p><strong>Dijkstra's Algorithm</strong>  (weighted): the father of pathfinding algorithms; guarantees the shortest path</p>
+    <div class="text-holder">
+    <p><strong>Breath-first Search</strong> (unweighted): a great algorithm; guarantees the shortest path.</p>
+    <p><strong>Depth-first Search</strong>  (unweighted): a very bad algorithm for pathfinding; does not guarantee the shortest path.</p>
+    <p><strong>Dijkstra's Algorithm</strong>  (weighted): the father of pathfinding algorithms; guarantees the shortest path.</p>
     </div>
     </div>
     
@@ -76,7 +76,7 @@
       <p class="subhead">Click on the grid to add a weight. Move mouse on the grid while pressing Alt to add a wall. Generate mazes and patterns from the "Mazes & Patterns" drop-down menu.</p>
     <p>Walls are impenetrable, meaning that a path cannot cross through them. Weights, however, are not impassable. They are simply more "costly" to move through. In this application, moving through a weight node has a "cost" of 15.</p>
     <div class="img-container">
-      <img src="../assets/images/Wall.png">
+      <img src="../assets/images/wall.gif">
     </div>
     </div>
     <div class="btn-container">
