--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,7 @@
     justify-content: center;
     z-index: 2;
     width: 100vw;
+    background-color: rgba(14, 14, 14, 0.507);
     height: 100vh;
 }
 
@@ -22,11 +23,11 @@
 }
 
 .img-container img{
-    width: 40%;
+    width: 14em;
 }
 
 .subhead{
-    font-size: 1.4rem !important;
+    font-size: 1.4em !important;
 }
 
 .btn-container{
@@ -38,19 +39,26 @@
     width: 100%;
 }
 
+.text-holder{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.text-holder p{
+    text-align: justify !important;
+}
 .card{
     background-color: white;
-    border: 1px solid rgb(12, 14, 34);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border-radius: 2px;
+    border-radius: 4px;
     padding: 0.5em 1.4em;
     min-width: 200px;
     max-width: 40%;
-    min-height: 60%;
-    max-height: 60%;
+    max-height: 90%;
 }
 
 .card h1{
@@ -78,7 +86,7 @@
 
 .navbar h1{
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     font-weight: 600;
 }
 
@@ -103,7 +111,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 400;
     margin-right: 1em;
 }
@@ -124,7 +132,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 400;
     text-align: center;
     height: 100%;
@@ -150,7 +158,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 400;
     text-align: center;
     height: 100%;
@@ -173,6 +181,7 @@
 
 .material-symbols-outlined{
     transition: transform 0.4s linear;
+    font-size: 1em;
     font-weight: 400;
 }
 
@@ -198,7 +207,7 @@
 .btn{
     background-color: rgb(255, 153, 0);
     color: white;
-    font-size: 1rem;
+    font-size: 1em;
     padding: .6em .8em;
     font-weight: 400;
     border-radius: 4px;
