Added source link

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -405,3 +405,16 @@
      top: 81px;
     }
  }
+
+ i{
+    font-size: 1em;
+    color: gray !important;
+ }
+ .copyright{
+    text-align: center;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    margin-left: .5em;
+    font-size: .8em;
+    color: gray;
+ }
