--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -186,3 +186,5 @@
   </div>
 </div>
 
+<div class="copyright">&copy;2023 ManishDait, <a href="https://github.com/ManishDait/Pathfinding-Visualizer"><i class="fa fa-github"></i></a></div>
+
