Fix image issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <div class="center-div">
       <p class="subhead">A pathfinding algorithm seeks to find the shortest path between two points. This application currently visualizes three pathfinding algorithms in action, and more to come!</p>
     <p>All of the algorithms on this application are adapted for a 2D grid, where movements from a node to another have a "cost" of 1.</p>
-    <div class="img-container"><img src="../assets/images/Graph.png"></div>
+    <div class="img-container"><img src="assets/images/Graph.png"></div>
    
     </div>-
      <div class="btn-container">
@@ -37,7 +37,7 @@
     <div class="center-div">
     <p class="subhead">Choose an algorithm from the "Algorithms" drop-down menu.</p>
       <p>Note that some algorithms are unweighted, while others are weighted. Unweighted algorithms do not weight nodes into account, whereas weighted ones do. Additionally, not all algorithms guarantee the shortest path.</p>
-    <div class="img-container"><img src="../assets/images/menu.gif"></div>
+    <div class="img-container"><img src="assets/images/menu.gif"></div>
     </div>
     
     <div class="btn-container">
@@ -76,7 +76,7 @@
       <p class="subhead">Click on the grid to add a weight. Move mouse on the grid while pressing Alt to add a wall. Generate mazes and patterns from the "Mazes & Patterns" drop-down menu.</p>
     <p>Walls are impenetrable, meaning that a path cannot cross through them. Weights, however, are not impassable. They are simply more "costly" to move through. In this application, moving through a weight node has a "cost" of 15.</p>
     <div class="img-container">
-      <img src="../assets/images/wall.gif">
+      <img src="assets/images/wall.gif">
     </div>
     </div>
     <div class="btn-container">
@@ -95,7 +95,7 @@
       <p class="subhead">Click the "Add Bomb" button.</p>
       <p>Adding a bomb will change the course of the chosen algorithm. In other words, the algorithm will first look for the bomb (in an effort to diffuse it) and will then look for the target node.</p>
       <div class="img-container">
-        <img src="../assets/images/Boom.png">
+        <img src="assets/images/Boom.png">
       </div>
     </div>
    <div class="btn-container">
