--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="center-div">
       <p class="subhead">This is a tutuorial which will help to understand feature of these application.</p>
     <p>If you want to dive right in, feel free to press the "Skip Tutorial" button below. Otherwise, press "Next"!</p>
-    <div class="img-container"><img src="../assets/images/Icon.png"></div>
+    <div class="img-container"><img src="assets/images/Icon.png"></div>
     </div>
     <div class="btn-container">
       <button class="btn" (click)="skip()">Skip</button>
