--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -341,7 +341,20 @@
     text-decoration: line-through;
 }
 
+.disable-div, .disable-button{
+    pointer-events: none;
+    cursor: default;
+    color: rgb(168, 168, 168) !important;
+}
 
+.disable-div p {
+    color: rgb(168, 168, 168) !important;
+}
+
+.disable-button {
+    background-color: rgb(167, 163, 158);
+    color: rgb(255, 255, 255) !important;
+}
 
 @media screen and (max-width: 1440px) {
     .dropmenu-algo{
