--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,7 +129,7 @@
   <h1>{{ title }}</h1>
 
   <div class="sub-nav">
-    <div class="dropdown-algo">
+    <div class="dropdown-algo" [ngClass]="{'disable-div': disAble}">
     <p (click)="toggleAlgo()">{{ selectedAlgo }} <span class="material-symbols-outlined" [ngClass]="algo? 'rotate': 'none'">expand_more</span></p>
       <ul class="dropmenu-algo" id="algo" [ngClass]="algo? 'displayAlgo':'act'">
         <li class="opt" (click)="this.selectedAlgo = 'Breath First Search'; toggleAlgo(); this.isWeight = false">Breath First Search</li>
@@ -138,7 +138,7 @@
       </ul>
     </div>
 
-    <div class="dropdown-maze">
+    <div class="dropdown-maze" [ngClass]="{'disable-div': disAble}">
       <p (click)="toggleMaze()">Mazes <span class="material-symbols-outlined" id="al"  [ngClass]="maze? 'rotate': 'none'">expand_more</span></p>
         <ul class="dropmenu-maze" id="maze"  [ngClass]="maze? 'displayMaze': 'none'">
           <li class="opt" (click)="toggleMaze(); generateWallMaze()">Random Maze</li>
@@ -147,16 +147,16 @@
     </div>
 
     <div class="options"  style="margin-left: 10px;">
-      <button class="links" (click)="addBoom()" [disabled]="disAble">{{boomAdded? 'Remove Boom': 'Add Boom'}}</button>
+      <button class="links" (click)="addBoom()" [disabled]="disAble" [ngClass]="{'disable-div': disAble}">{{boomAdded? 'Remove Boom': 'Add Boom'}}</button>
     </div>
 
-    <button class="btn" (click)="visualize()" [disabled]="disAble">Visualize!</button>
+    <button class="btn" (click)="visualize()" [disabled]="disAble" [ngClass]="{'disable-button': disAble}">Visualize!</button>
    
 
     <div class="options" style="margin-left: auto;">
-      <button class="links" (click)="clearWall()" [disabled]="disAble">Clear Wall & Weights</button>
-      <button class="links" (click)="clearPath()" [disabled]="disAble">Clear Path</button>
-      <button class="links" (click)="clearBoard()" [disabled]="disAble">Clear Board</button>
+      <button class="links" (click)="clearWall()" [disabled]="disAble" [ngClass]="{'disable-div': disAble}">Clear Wall & Weights</button>
+      <button class="links" (click)="clearPath()" [disabled]="disAble" [ngClass]="{'disable-div': disAble}">Clear Path</button>
+      <button class="links" (click)="clearBoard()" [disabled]="disAble" [ngClass]="{'disable-div': disAble}">Clear Board</button>
     </div>
   </div>
 </div>
