Fix font case for dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -135,7 +135,7 @@
         <li class="opt" (click)="this.selectedAlgo = 'Breath First Search'; toggleAlgo(); this.isWeight = false">Breath First Search</li>
         <li class="opt" (click)="this.selectedAlgo = 'Depth First Search'; toggleAlgo(); this.isWeight = false">Depth First Search</li>
         <li class="opt" (click)="this.selectedAlgo = 'Dijktras'; toggleAlgo(); this.isWeight = true">Dijistras</li>
-        <li class="opt" (click)="this.selectedAlgo = 'BiDirectional'; toggleAlgo(); this.isWeight = false">Bidirectional</li>
+        <li class="opt" (click)="this.selectedAlgo = 'Bidirectional'; toggleAlgo(); this.isWeight = false">Bidirectional</li>
       </ul>
     </div>
 
