Fix details for Bidirectional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,6 +178,7 @@
   <p *ngSwitchCase="'Breath First Search'" class="banner">Breath-First Search is <strong><em>unweighted</em></strong> and <strong><em>guarantees</em></strong> shortest path.</p>
   <p *ngSwitchCase="'Depth First Search'" class="banner">Depth-First Search is <strong><em>unweighted</em></strong> and <strong><em>desn't guarantees</em></strong> shortest path!</p>
   <p *ngSwitchCase="'Dijktras'" class="banner">Dijktras is <strong><em>weighted</em></strong> and <strong><em>guarantees</em></strong> shortest path.</p>
+  <p *ngSwitchCase="'Bidirectional'" class="banner">Bidirectional (BFS) use <strong><em>two separate searches</em></strong> from <strong><em>source</em></strong> and <strong><em>target</em></strong>.</p>
 </div>
 
 
